# dotfiles

./: .gitignore  .pre-commit-config.yaml  README.md  SENTUInstaller  dev_tools.py  install.sh  logger_utils.py  logo.py  main.py  pyproject.toml  ruff.toml  sentu_dotfiles.py  sentu_install.py  sentu_setup.py
.borrame/: sentu_install.py
.borrame/common/: install_packages.py  logger_utils.py  system_info.py
.borrame/config/alacritty/: alacritty.toml  alacritty.yml  fonts.toml  fonts.yml
.borrame/config/fastfetch/: config.jsonc  difference.sh  progress.sh
.borrame/config/nvim/: lazy-lock.json
.borrame/config/ohmyposh/: negligible.omp.json
.borrame/config/tmuxinator/: sentu.yml
.borrame/docs/: post_installer_project_structure.md
.borrame/phase1/: main.py
.borrame/scripts/: run_phase2.ps1  run_phase2.sh
.github/ISSUE_TEMPLATE/: 🎯-solicitud-de-pull-request.md  🐞-bug-report.md  💡-solicitud-de-función.md
.github/workflows/: ci.yml
alacritty/: alacritty.toml
common/: flatpak_installer.py  install_dotfiles.py  system_info.py  system_operations.py
config/: starship.toml
config/git/: gitconfig
config/nvim/: lazy-lock.json  lazyvim.json
config/nvim/lua/config/: options.lua
config/nvim/lua/plugins/: python.lua
config/package_managers/: arch.yaml  centos.yaml  debian.yaml  fedora.yaml
config/sentu/: logo.sh
config/tmuxinator/: eureka.yml
docs/meetings/20250122-1113/: 00_CONTEXT.md  01_SESSIONS.md  02_PROGRESS.md
docs/meetings/20250122-1915/: 00_CONTEXT.md  01_SESSIONS.md
docs/meetings/20250123-1755/: 00_CONTEXT.md  03_DECISIONS.md
git/: gitconfig
home/: .zshrc
nvim/: lazy-lock.json
phase1/: main.py  system_operations.py
phase2/: main.py
requirements/: requirements-dev.txt
scripts/: create_project_django.sh  dev_tools.py  fedora-setup.sh  install-wallpaper.sh  login.sh  post-install-fedora.sh
src/: main.py
src/core/: package_config_loader.py  system_detector.py
src/phase1/: main.py
src/shared/: sentu_dotfiles.py  sentu_setup.py  system_info.py  system_operations.py
src/utils/: logger.py
tests/: test_system_detector.py  test_system_detector_v2.py
tests/test_core/: test_package_config_loader.py  test_system_detector.py
tests/test_utils/: test_logger.py
tmux/: tmux.conf
tmuxinator/: django.yml  sentu.yml
zsh/: zshrc
