[project]
name = "dotfiles"
version = "0.1.0"
description = "Instalador de paquetes y dotfiles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["inquirerpy>=0.3.4", "typer>=0.15.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test", "Describe"]
python_functions = ["test_*", "it_*", "they_*"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "pass",
  "raise ImportError",
]
ignore_errors = true
fail_under = 80
show_missing = true
